<?xml version="1.0"?>
<package>
  <name>talos_integration_tests</name>
  <version>0.0.8</version>
  <description>Talos integration tests</description>
  <!-- Maintainer email -->
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Author tag -->
 <author email="ostasse@laas.fr">Olivier Stasse</author>

  <test_depend>gtest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>talos_gazebo</build_depend>
  <run_depend>roscontrol_sot_talos</run_depend>
  <run_depend>dynamic_graph_bridge_msgs</run_depend>
  <run_depend>sot-talos-balance</run_depend>

  <run_depend>rospy</run_depend>
  <run_depend>talos_gazebo</run_depend>
  <run_depend>roscontrol_sot_talos</run_depend>
  <run_depend>dynamic_graph_bridge_msgs</run_depend>
  <run_depend>sot-pattern-generator</run_depend>

</package>
